Update Views icons

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -43,15 +43,15 @@
                     <span>Gastos</span>
                 </a></li>
                 <li><a class="sidebar-link" href="fuentes-ingreso">
-                    <i class="fa-solid fa-house"></i>
+                    <i class="fa-solid fa-money-check-alt"></i>
                     <span>Fuentes de Ingreso</span>
                 </a></li>
                 <li><a class="sidebar-link" href="grupos-gasto">
-                    <i class="fa-solid fa-dollar-sign"></i>
+                    <i class="fa-solid fa-th-list"></i>
                     <span>Grupos de Gasto</span>
                 </a></li>
                 <li><a class="sidebar-link" href="categorias-gasto">
-                    <i class="fa-solid fa-credit-card"></i>
+                    <i class="fa-solid fa-tags"></i>
                     <span>Categorías de Gasto</span>
                 </a></li>
             </ul>
