--- a/src/views/gastos.ejs
+++ b/src/views/gastos.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') %>
 <!--table-->
 <div class="table-container">
-    <table>
+    <table id="table" >
         <thead>
             <tr>
                 <th>#</th>
@@ -18,4 +18,5 @@
     </table>
 </div>
 <script src="js/gastos.js"></script>
+<script src="js/data-table.js"></script>
 <%- include('partials/footer') %>
