--- a/src/public/css/window.css
+++ b/src/public/css/window.css
@@ -38,8 +38,9 @@ body{
     color: var(--sidebar-color);
     padding: 12px;
     transition: width 1s,padding 1s;
-    overflow: hidden;
+    overflow: auto;
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3);
+    scrollbar-width: none;
 }
 .sidebar hr {
     border-color: rgba(255, 255, 255, 0.238);
