--- a/src/views/categorias-gasto.ejs
+++ b/src/views/categorias-gasto.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') %>
 <!--table-->
 <div class="table-container">
-    <table>
+    <table id="table" >
         <thead>
             <tr>
                 <th>#</th>
@@ -13,4 +13,5 @@
     </table>
 </div>
 <script src="js/categorias-gasto.js"></script>
+<script src="js/data-table.js"></script>
 <%- include('partials/footer') %>
