--- a/src/views/fuentes-ingreso.ejs
+++ b/src/views/fuentes-ingreso.ejs
@@ -1,17 +1,18 @@
 <%- include('partials/header') %>
 <!--table-->
 <div class="table-container">
-    <table>
+    <table id="table" class="table" >
         <thead>
             <tr>
                 <th>#</th>
                 <th>Nombre</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id="tbody">
             
         </tbody>
     </table>
 </div>
 <script src="js/fuentes-ingreso.js"></script>
+<script src="js/data-table.js"></script>
 <%- include('partials/footer') %>
