--- a/src/views/ingresos.ejs
+++ b/src/views/ingresos.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') %>
 <!--table-->
 <div class="table-container">
-    <table>
+    <table id="table" >
         <thead>
             <tr>
                 <th>#</th>
@@ -17,4 +17,5 @@
     </table>
 </div>
 <script src="js/ingresos.js"></script>
+<script src="js/data-table.js"></script>
 <%- include('partials/footer') %>
