--- a/src/views/categorias-gasto.ejs
+++ b/src/views/categorias-gasto.ejs
@@ -1,6 +1,10 @@
 <%- include('partials/header') %>
+<div>
+    <%- include("partials/btn-nuevo") %>
+</div>
 <!--table-->
 <div class="table-container">
+    
     <table id="table" >
         <thead>
             <tr>
