--- a/src/views/fuentes-ingreso.ejs
+++ b/src/views/fuentes-ingreso.ejs
@@ -1,4 +1,7 @@
 <%- include('partials/header') %>
+<div>
+    <%- include("partials/btn-nuevo") %>
+</div>
 <!--table-->
 <div class="table-container">
     <table id="table" class="table" >
