--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -68,7 +68,9 @@
                     <input type="text" placeholder="Buscar..." />
                     <button><i class="fa-solid fa-search"></i></button>
                 </div>
-                <button id="btn-nuevo" onclick="Nuevo()"><i class="fa-solid fa-plus"></i> Nuevo</button>
+
+                <%- include("combo-date") %>
+                
             </header>
             <!--main-->
             <main>
