--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi APP</title>
+    <title>Control Gastos</title>
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--Custom CSS -->
@@ -11,15 +11,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!--Title Bar-->
-    <div class="title-bar">
-        <span class="title">Control Gastos</span>
-        <div class="window-controls">
-            <button id="minimize">–</button>
-            <button id="maximize">□</button>
-            <button id="close">×</button>
-        </div>
-    </div>
     <!---->    
     <div class="container">
         <!--SideBar-->
@@ -66,7 +57,7 @@
                 </button>
                 <div class="combo-fecha">
                     <select id="año">
-                        <% for (let i = new Date().getFullYear(); i >= 2000; i--) { %>
+                        <% for (let i = new Date().getFullYear(); i >= 2020; i--) { %>
                             <option value="<%= i %>"><%= i %></option>
                         <% } %>
                     </select>
