--- a/src/public/css/window.css
+++ b/src/public/css/window.css
@@ -13,6 +13,9 @@ body{
     display: flex;
     height: 100dvh;
 }
+.sidebar{
+    height: 100%;
+}
 .content{
     width: 100%;
     overflow: auto;
