--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Control Gastos</title>
+    <link rel="icon" href="img/icon.png" type="image/png">
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--Custom CSS -->
@@ -21,7 +22,7 @@
             </div>
             <hr>
             <ul>
-                <li><a class="sidebar-link" href="/">
+                <li><a class="sidebar-link" href="resumen">
                     <i class="fa-solid fa-house"></i>
                     <span>Resumen</span>
                 </a></li>
@@ -52,9 +53,11 @@
         <div class="content">
             <!--Header-->
             <header>
-                <button id="menu-button">
-                    <i class="fa-solid fa-bars"></i>
-                </button>
+                <div class="search-box">
+                    <input type="text" placeholder="Buscar..." />
+                    <button><i class="fa-solid fa-search"></i></button>
+                </div>
+                 
                 <div class="combo-fecha">
                     <select id="año">
                         <% for (let i = new Date().getFullYear(); i >= 2020; i--) { %>
@@ -69,11 +72,6 @@
                         <% } %>
                     </select>
                 </div>  
-                <div class="search-box">
-                    <input type="text" placeholder="Buscar..." />
-                    <button><i class="fa-solid fa-search"></i></button>
-                </div>
-                 
             </header>
             <!--main-->
             <main>
