cuadro de busqueda funcional

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -54,8 +54,8 @@
             <!--Header-->
             <header>
                 <div class="search-box">
-                    <input type="text" placeholder="Buscar..." />
-                    <button><i class="fa-solid fa-search"></i></button>
+                    <input id="busqueda" type="text" placeholder="Buscar..." />
+                    <button id="btn-busqueda"><i class="fa-solid fa-search"></i></button>
                 </div>
                  
                 <div class="combo-fecha">
