--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -12,6 +12,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 .form {
@@ -20,6 +21,7 @@
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     width: 300px;
+
 }
 
 .form h1 {
