--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -22,7 +22,7 @@
             <button onclick="Login()">Entrar</button>
         </div>
     </div>
-    <script src="js/api-rest.js"></script>
+    <script src="js/api.js"></script>
     <script src="js/login.js"></script>
 </body>
 </html>
