--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -4,7 +4,7 @@
 <!--SweetAlert2-->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <!--Custom JS -->
-<script src="js/api-rest.js"></script>
+<script src="js/api.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
