--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -279,31 +279,45 @@ main{
         background-color: rgb(254, 242, 220);
     }
 }
+
+/*--------------------------------------*/
 .graficas{
     display: grid;
-    grid-template-columns: max-content 1fr;
+    grid-template-columns: 200px 1fr;
     gap: 10px;
+    /*canvas*/
+    & .cont-canvas{
+        background-color: white;
+        border-radius: 10px;
+        padding: 10px;
+        & .canvas_titulo{
+            text-align: center;
+        }
+        & canvas{
+            display: block;
+            margin: auto;
+            width: 100%;
+            max-width: 500px;
+        }
+    }
+    /*partes*/
+    & .graficas-lateral{
+        display: grid;
+        gap: 10px;
+    }
+    & .graficas-central{
+        gap: 10px;
+    }
+    
 }
-.graficas-lateral{
-    width: 200px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-canvas{
-    width: 100%;
-}
-.graficas-central{
-    width: 100%;
-}
-.cont-grafica{
-    padding: 10px;
-    width: 100%;
-    background-color: white;
-    border-radius: 5px;
-    overflow: hidden;
-}
-.cont-canvas{
-    width: 500px;
-    margin: auto;
+
+
+
+@media (max-width: 780px){
+    .graficas{
+        grid-template-columns: 1fr;
+        & .graficas-lateral{
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        }
+    }
 }
