--- a/src/views/resumen.ejs
+++ b/src/views/resumen.ejs
@@ -19,18 +19,19 @@
 
 <div class="graficas">
     <div class="graficas-lateral">
-        <div class="cont-grafica">
-            <canvas id="grafica_ingresos"></canvas>
+        <div class="cont-canvas">
+            <h4 class="canvas_titulo">Ingresos Mensual</h4>
+            <canvas id="canvas_ingresos"></canvas>
         </div>
-        <div class="cont-grafica">
-            <canvas id="grafica_gastos"></canvas>
+        <div class="cont-canvas">
+            <h4 class="canvas_titulo">Gastos Mensual</h4>
+            <canvas id="canvas_gastos"></canvas>
         </div>
-    </div>
+    </div> 
     <div class="graficas-central">
-        <div class="cont-grafica">
-            <div class="cont-canvas">
-                <canvas id="gragica_anual"></canvas>
-            </div>
+        <div class="cont-canvas">
+            <h4 class="canvas_titulo">Comparativa Mensual de Ingresos y Gastos</h4>
+            <canvas width="300" height="200" id="canvas_anual"></canvas>
         </div>
     </div>
 </div>
@@ -40,14 +41,13 @@
 <script src="js/graficas.js"></script>
 <script src="js/resumen.js"></script>
 <script>
-    const labels = ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio'];
-        const ingresos = [3000, 4000, 3500, 5000, 4500, 0, 0];
-        const gastos = [2000, 2500, 3000, 4000, 3500, 0, 0];
+    const labels = ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio','Agosto','Setiembre','Octubre','Noviembre','Diciembre'];
+        const ingresos = [3000, 4000, 3500, 5000, 4500,2000, 2500, 3000, 4000, 3500,2324,2135];
+        const gastos = [2000, 2500, 3000, 4000, 3500,3000, 4000, 3500, 5000, 4500,980,5200];
 
-        createPieChart('grafica_ingresos', ['Sueldo', 'Cachuelo'], [2500,200]);
-        createPieChart('grafica_gastos', ['Alimentacion', 'educacion',"servicios"], [50,1250,200]);
-
-        createBarChart('gragica_anual', labels, ingresos, gastos);
+        createPieChart('canvas_ingresos', ['Sueldo', 'Cachuelo'], [2500,200]);
+        createPieChart('canvas_gastos', ['Alimentacion', 'educacion',"servicios","servicios","otros"], [50,1250,200,200,500]);
+        createBarChart('canvas_anual', labels, ingresos, gastos);
 
 </script>
 <%- include('partials/footer') %>
