--- a/src/views/fuentes-ingreso.ejs
+++ b/src/views/fuentes-ingreso.ejs
@@ -1,5 +1,6 @@
 <%- include('partials/header') %>
-<div>
+<div class="main-header">
+    <span class="titulo">Fuentes de Ingreso</span>
     <%- include("partials/btn-nuevo") %>
 </div>
 <!--table-->
