--- a/src/views/resumen.ejs
+++ b/src/views/resumen.ejs
@@ -32,7 +32,7 @@
         <div class="graficas-central">
             <div class="cont-canvas">
                 <h4 class="canvas_titulo">Comparativa Mensual de Ingresos y Gastos</h4>
-                <canvas width="300" height="200" id="canvas_anual"></canvas>
+                <canvas id="canvas_anual"></canvas>
             </div>
         </div>
     </div>
