--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -224,21 +224,32 @@ main{
     }
     
 }
-.titulo{
-    color: var(--titulo-color);
-    width: max-content;
-    float: left;
+.main-header{
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
+    gap: 10px;
+    & .titulo{
+        width: 100%;
+        color: var(--titulo-color);
+        font-weight: bold;
+        font-size: 20px;
+        text-wrap: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+    & #btn-nuevo{
+        background-color: orange;
+        color: white;
+        padding: 8px 10px;
+        border: none;
+        border-radius: 50px;
+        font-weight:bold ;
+        cursor: pointer;
+    }
 }
-#btn-nuevo{
-    background-color: orange;
-    color: white;
-    padding: 8px 10px;
-    border: none;
-    border-radius: 50px;
-    font-weight:bold ;
-    cursor: pointer;
-    float: right;
-}
+
+
 .formulario{
     display: grid;
     grid-template-columns: max-content auto;
@@ -297,7 +308,6 @@ main{
             display: block;
             margin: auto;
             width: 100%;
-            max-height: 400px;
         }
     }
     /*partes*/
@@ -307,6 +317,9 @@ main{
     }
     & .graficas-central{
         gap: 10px;
+        & canvas{
+            max-height: 400px;
+        }
     }
     
 }
