--- a/src/views/ingresos.ejs
+++ b/src/views/ingresos.ejs
@@ -1,5 +1,6 @@
 <%- include('partials/header') %>
-<div>
+<div class="main-header">
+    <span class="titulo">Ingresos</span>
     <%- include("partials/btn-nuevo") %>
 </div>
 <!--table-->
